# wine_quality_project

./: .gitignore  LICENSE  README.md  main.py  pylintrc  pyproject.toml  setup.py  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb
src/mlProject/components/: data_ingestion.py
src/mlProject/config/: configuration.py
src/mlProject/entity/: config_entity.py
src/mlProject/pipeline/: stage_01_data_ingestion.py
src/mlProject/utils/: common.py
src/wine_quality_project/: __init__.py
